--- a/docs/docs/how_to/using-devcontainers.mdx
+++ b/docs/docs/how_to/using-devcontainers.mdx
@@ -1,15 +1,15 @@
 ---
-title: Devcontainers and Codespaces
+title: Developer Containers and Codespaces
 description: "Learn how to set up a devcontainer in your GitHub repository for a seamless coding experience with Codespaces. Follow our easy 8-step guide to create your own Noir environment without installing Nargo locally."
 keywords: ["Devcontainer", "Codespaces", "GitHub", "Noir Environment", "Docker Image", "Development Environment", "Remote Coding", "GitHub Codespaces", "Noir Programming", "Nargo", "VSCode Extensions", "Noirup"]
 sidebar_position: 1
 ---
 
-Noir has extensive tooling. Thanks to Noirup, adding a devcontainer to your own repository is quite easy and pretty powerful.
+Adding a developer container configuration file to your Noir project is one of the easiest way to unlock coding in browser.
 
 ## What's a devcontainer after all?
 
-A devcontainer is a Docker image that comes preloaded with tools, extensions, and other tools you need to quickly get started or continue a project, without having to install Nargo locally. Think of it as a development environment in a box.
+A [Developer Container](https://containers.dev/) (devcontainer for short) is a Docker image that comes preloaded with tools, extensions, and other tools you need to quickly get started or continue a project, without having to install Nargo locally. Think of it as a development environment in a box.
 
 There are many advantages to this:
 
@@ -46,6 +46,11 @@ Don't take out your wallet just yet. Free GitHub accounts get about [15-60 hours
 It is!
 
 Github comes with a default codespace and you can use it to code your own devcontainer. That's exactly what we will be doing in this guide.
+
+<video width="100%" height="auto" controls>
+  <source src={require('@site/static/video/how-tos/devcontainer.mp4').default} type="video/mp4" />
+  Your browser does not support the video tag.
+</video>
 
 8 simple steps:
 
@@ -84,16 +89,15 @@ ENTRYPOINT ["nargo"]
 ```
 #### 6. Commit and push your changes
 
-#### 7. Open the command palette and run "Rebuild Codespace". 
 This will pull the new image and build it, so it could take a minute or so
 
 #### 8. Done! 
-Just wait for the build to finish, and there's your easy Noir environment
+Just wait for the build to finish, and there's your easy Noir environment.
 
-<video width="100%" height="auto" controls>
-  <source src={require('@site/static/video/how-tos/devcontainer.mp4').default} type="video/mp4" />
-  Your browser does not support the video tag.
-</video>
+
+Refer to [noir-starter](https://github.com/noir-lang/noir-starter/) as an example of how devcontainers can be used together with codespaces.
+
+
 
 ## How do I use it?
 
