chore: yp docs sidebar (with some auto-formatting) (#3893)
- Introducing a sidebar, because it turns out the docusaurus default (of
specifying `sidebar_position` doesn't scale).
- Also some markdown auto-formatting which didn't look too
controversial, so I kept it in.
- Also file & folder renaming to be `this-case` instead of `this_case`
(I copied the dominant case of this yellow paper dir), which will
probably make the diff look horrendous.

--- a/yellow-paper/docs/public-vm/InstructionSet.mdx
+++ b/yellow-paper/docs/public-vm/InstructionSet.mdx
@@ -4,6 +4,6 @@ sidebar_position: 2
 
 # Instruction Set
 
-import GeneratedInstructionSet from './gen/_InstructionSet.mdx';
+import GeneratedInstructionSet from "./gen/_InstructionSet.mdx";
 
 <GeneratedInstructionSet />
